tests/baselines/reference/newAbstractInstance.errors.txt
tests/cases/compiler/newAbstractInstance.ts(3,1): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.


==== tests/cases/compiler/newAbstractInstance.ts (1 errors) ====
    abstract class B { }
    declare const b: B;
    new b();
    ~~~~~~~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.
    